[package]
name = "findata_engine_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "findata_engine_rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
chrono = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.7"
zstd = "0.12"

[dev-dependencies]
criterion = "0.4"
proptest = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
